<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:title="@string/text_category" />
        <item
            android:id="@+id/nav_notification"
            android:title="@string/text_notification" />

    </group>

    <item android:title="@string/text_about">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_about"
                    android:title="@string/text_about" />
            </group>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/text_logout" />
        </menu>
    </item>

</menu>
